--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.26.0
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-openai==1.0.0
-pypdf==4.0.0
-pillow==10.0.0
-pytesseract==0.3.10
-tqdm==4.66.1
-python-dotenv==1.0.1
+streamlit
+sentence-transformers
+faiss-cpu
+openai
+pypdf
+pillow
+pytesseract
+tqdm
+python-dotenv
